fix: ensure button always stays visible

--- a/src/features/appointments-calendar/appointments-calendar.scss
+++ b/src/features/appointments-calendar/appointments-calendar.scss
@@ -16,8 +16,10 @@ $modal-height: 280px;
         border-radius: 12px 12px 0 0;
         height: auto;
         min-height: unset;
-        position: relative;
-        transform: translateY(calc(100vh - 100%));
+        bottom: 0;
+        padding-bottom: 16px;
+        position: fixed;
+        transform: unset;
       }
     }
   }
